fix .external svg color on dark mode (#889)

--- a/resources/css/content.css
+++ b/resources/css/content.css
@@ -54,7 +54,8 @@ article, .markdown {
     a svg.external {
         @apply inline-block;
         vertical-align: text-top;
-        color: rgba(0,0,0,.6);
+        color: currentColor;
+        opacity: .6;
     }
 
     h2 > .anchor,
